--- a/Core.DALC/QOfreces.WPF/Administrador.xaml
+++ b/Core.DALC/QOfreces.WPF/Administrador.xaml
@@ -13,8 +13,10 @@
         </Grid.ColumnDefinitions>
         <Label x:Name="label" Content="Administración del Sistema" HorizontalAlignment="Left" Margin="212,21,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="26" Width="153"/>
         <Button x:Name="btnMantUser" Content="Mantenedor Usuarios" HorizontalAlignment="Left" Margin="10,53,0,0" VerticalAlignment="Top" Width="138" Click="btnMantUser_Click"/>
-        <Button x:Name="button" Content="Volver" Grid.Column="1" HorizontalAlignment="Left" Margin="194,219,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
-        <Button x:Name="button1" Content="Salir" Grid.Column="1" HorizontalAlignment="Left" Margin="105,219,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
+        <Button x:Name="btnMantEmp" Content="Volver" Grid.Column="1" HorizontalAlignment="Left" Margin="194,219,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <Button x:Name="btnSalir" Content="Salir" Grid.Column="1" HorizontalAlignment="Left" Margin="105,219,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
+        <Button x:Name="btnVolver" Content="Mantenedor Empresa" HorizontalAlignment="Left" Margin="10,80,0,0" VerticalAlignment="Top" Width="138" Click="btnVolver_Click"/>
+        <Button x:Name="btnMantRub" Content="Mantenedor Rubro" HorizontalAlignment="Left" Margin="10,114,0,0" VerticalAlignment="Top" Width="138" Click="btnMantRub_Click"/>
 
     </Grid>
 </Window>
