--- a/Core.DALC/QOfreces.WPF/ListarUsuarios.xaml
+++ b/Core.DALC/QOfreces.WPF/ListarUsuarios.xaml
@@ -7,7 +7,12 @@
         mc:Ignorable="d"
         Title="ListarUsuarios" Height="426.852" Width="972.268">
     <Grid>
-        <DataGrid x:Name="dataGridProductos" HorizontalAlignment="Left" Margin="25,67,0,0" VerticalAlignment="Top" Height="190" Width="902" SelectionChanged="dataGridProductos_SelectionChanged" Loaded="dataGridProductos_Loaded"/>
-        
+        <DataGrid x:Name="dataGridProductos" HorizontalAlignment="Left" Margin="99,73,0,0" VerticalAlignment="Top" Height="171" Width="703" Loaded="dataGridProductos_Loaded" >
+            <DataGrid.Columns>
+                <DataGridCheckBoxColumn  />
+            </DataGrid.Columns>
+        </DataGrid>
+
+
     </Grid>
 </Window>
