--- a/Core.DALC/Core.DALC/QueOfrecesEDM.tt
+++ b/Core.DALC/Core.DALC/QueOfrecesEDM.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF.Utility.CS.ttinclude"#><#@ 
  output extension=".cs"#><#
 
-const string inputFile = @"EDMQueOfreces.edmx";
+const string inputFile = @"QueOfrecesEDM.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
