--- a/Core.DALC/QOfreces.WPF/Administrador.xaml
+++ b/Core.DALC/QOfreces.WPF/Administrador.xaml
@@ -16,7 +16,8 @@
         <Button x:Name="btnMantEmp" Content="Volver" Grid.Column="1" HorizontalAlignment="Left" Margin="194,219,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
         <Button x:Name="btnSalir" Content="Salir" Grid.Column="1" HorizontalAlignment="Left" Margin="105,219,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
         <Button x:Name="btnVolver" Content="Mantenedor Empresa" HorizontalAlignment="Left" Margin="10,80,0,0" VerticalAlignment="Top" Width="138" Click="btnVolver_Click"/>
-        <Button x:Name="btnMantRub" Content="Mantenedor Rubro" HorizontalAlignment="Left" Margin="10,114,0,0" VerticalAlignment="Top" Width="138" Click="btnMantRub_Click"/>
+        <Button x:Name="btnMantRub" Content="Mantenedor Rubro" HorizontalAlignment="Left" Margin="10,107,0,0" VerticalAlignment="Top" Width="138" Click="btnMantRub_Click"/>
+        <Button x:Name="btnMantProd" Content="Mantenedor Producto" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top" Width="138" Click="btnMantProd_Click"/>
 
     </Grid>
 </Window>
