--- a/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
@@ -5,9 +5,24 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QOfreces.WPF"
         mc:Ignorable="d"
-        Title="MantenedorProducto" Height="300" Width="300">
-    <Grid>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="174,67,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        Title="MantenedorProducto" Height="456.926" Width="709.629">
+    <Grid x:Name="col_1">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="443*"/>
+            <ColumnDefinition Width="131*"/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="button" Content="Agregar Producto" HorizontalAlignment="Left" Margin="44,49,0,0" VerticalAlignment="Top" Width="106" Click="button_Click" Grid.Column="1" Height="22"/>
+        <Button x:Name="btnListarProd" Content="Listar Productos" Grid.Column="1" HorizontalAlignment="Left" Margin="44,76,0,0" VerticalAlignment="Top" Width="106" Height="22" Click="btnListarProd_Click"/>
+        <DataGrid x:Name="dGridProd" HorizontalAlignment="Left" Margin="10,194,0,0" VerticalAlignment="Top" Height="143" Width="522" Visibility="Visible">
+            <DataGridTemplateColumn Header="Productos">
+                <DataGridTemplateColumn.CellTemplate>
+                    <DataTemplate>
+                        <CheckBox x:Name="chkProd"/>
+                    </DataTemplate>
+                </DataGridTemplateColumn.CellTemplate>
+            </DataGridTemplateColumn>
+
+        </DataGrid>
 
     </Grid>
 </Window>
