--- a/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
@@ -17,12 +17,13 @@
             <DataGridTemplateColumn Header="Productos">
                 <DataGridTemplateColumn.CellTemplate>
                     <DataTemplate>
-                        <CheckBox x:Name="chkProd"/>
+                        <CheckBox x:Name="chkProd" Checked="chkProd_Checked"/>
                     </DataTemplate>
                 </DataGridTemplateColumn.CellTemplate>
             </DataGridTemplateColumn>
 
         </DataGrid>
+        <Label x:Name="lblPrueba" Content="" HorizontalAlignment="Left" Margin="236,135,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
