--- a/Core.DALC/QOfreces.WPF/EncargadoTienda.xaml
+++ b/Core.DALC/QOfreces.WPF/EncargadoTienda.xaml
@@ -12,9 +12,9 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Label x:Name="lblMenu" Content="Menu Encargado de Tienda" HorizontalAlignment="Center" Margin="67,18,58,0" VerticalAlignment="Top" Width="167" Grid.ColumnSpan="2"/>
-        <Button x:Name="button" Grid.ColumnSpan="2" Content="Consultar Ofertas" HorizontalAlignment="Left" Margin="10,84,0,0" VerticalAlignment="Top" Width="129"/>
-        <Button x:Name="button1" Grid.ColumnSpan="2" Content="Generar Oferta" HorizontalAlignment="Left" Margin="10,111,0,0" VerticalAlignment="Top" Width="129" Click="button1_Click"/>
+        <Button x:Name="button1" Grid.ColumnSpan="2" Content="Consultar Oferta" HorizontalAlignment="Left" Margin="10,84,0,0" VerticalAlignment="Top" Width="129" Click="button1_Click"/>
         <DataGrid x:Name="dataGridOfertas" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="163,84,0,0" VerticalAlignment="Top" Height="168" Width="540" />
+        <Button Grid.ColumnSpan="2" Content="Generar Oferta" HorizontalAlignment="Left" Margin="10,111,0,0" VerticalAlignment="Top" Width="129" Click="Button_Click"/>
 
     </Grid>
 </Window>
