--- a/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
@@ -5,25 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QOfreces.WPF"
         mc:Ignorable="d"
-        Title="MantenedorProducto" Height="456.926" Width="709.629">
+        Title="MantenedorProducto" Height="548.593" Width="891.553">
     <Grid x:Name="col_1">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="443*"/>
-            <ColumnDefinition Width="131*"/>
+            <ColumnDefinition Width="181*"/>
+            <ColumnDefinition Width="53*"/>
         </Grid.ColumnDefinitions>
         <Button x:Name="button" Content="Agregar Producto" HorizontalAlignment="Left" Margin="44,49,0,0" VerticalAlignment="Top" Width="106" Click="button_Click" Grid.Column="1" Height="22"/>
         <Button x:Name="btnListarProd" Content="Listar Productos" Grid.Column="1" HorizontalAlignment="Left" Margin="44,76,0,0" VerticalAlignment="Top" Width="106" Height="22" Click="btnListarProd_Click"/>
-        <DataGrid x:Name="dGridProd" HorizontalAlignment="Left" Margin="10,194,0,0" VerticalAlignment="Top" Height="143" Width="522" Visibility="Visible">
-            <DataGridTemplateColumn Header="Productos">
-                <DataGridTemplateColumn.CellTemplate>
-                    <DataTemplate>
-                        <CheckBox x:Name="chkProd" Checked="chkProd_Checked"/>
-                    </DataTemplate>
-                </DataGridTemplateColumn.CellTemplate>
-            </DataGridTemplateColumn>
-
+        <Label x:Name="lblPrueba" Content="" HorizontalAlignment="Left" Margin="236,135,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
+        <DataGrid x:Name="dgProd" HorizontalAlignment="Left" Margin="27,161,0,0" VerticalAlignment="Top" Height="161" Width="600">
+            <DataGrid.Columns>
+                <DataGridTextColumn x:Name="dgcId" Header="ID" Binding="{Binding Path=IdProducto}"/>
+                <DataGridTextColumn x:Name="dgcNom" Header="Nombre Producto" Binding="{Binding Path=Nombre}"/>
+                <DataGridTextColumn x:Name="dgcPrec" Header="Precio Producto" Binding="{Binding Path=Precio}"/>
+            </DataGrid.Columns>
         </DataGrid>
-        <Label x:Name="lblPrueba" Content="" HorizontalAlignment="Left" Margin="236,135,0,0" VerticalAlignment="Top"/>
+
+
+
 
     </Grid>
 </Window>
