--- a/Core.DALC/QOfreces.WPF/Administrador.xaml
+++ b/Core.DALC/QOfreces.WPF/Administrador.xaml
@@ -4,20 +4,25 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QOfreces.WPF"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="Administrador" Height="300" Width="588.462">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Label x:Name="label" Content="Administración del Sistema" HorizontalAlignment="Left" Margin="212,21,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="26" Width="153"/>
-        <Button x:Name="btnMantUser" Content="Mantenedor Usuarios" HorizontalAlignment="Left" Margin="10,53,0,0" VerticalAlignment="Top" Width="138" Click="btnMantUser_Click"/>
-        <Button x:Name="btnMantEmp" Content="Volver" Grid.Column="1" HorizontalAlignment="Left" Margin="194,219,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
-        <Button x:Name="btnSalir" Content="Salir" Grid.Column="1" HorizontalAlignment="Left" Margin="105,219,0,0" VerticalAlignment="Top" Width="75" Click="button1_Click"/>
-        <Button x:Name="btnVolver" Content="Mantenedor Empresa" HorizontalAlignment="Left" Margin="10,80,0,0" VerticalAlignment="Top" Width="138" Click="btnVolver_Click"/>
-        <Button x:Name="btnMantRub" Content="Mantenedor Rubro" HorizontalAlignment="Left" Margin="10,107,0,0" VerticalAlignment="Top" Width="138" Click="btnMantRub_Click"/>
-        <Button x:Name="btnMantProd" Content="Mantenedor Producto" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top" Width="138" Click="btnMantProd_Click"/>
+        Title="Administrador de sistema" Height="396.226" Width="728.84" Background="Gainsboro">
+    <Grid Margin="0,0,2,0">
+        <Controls:Tile x:Name="tiRubro" Margin="557.5,53,-5.5,176" TitleFontSize="12" Title="Mantenedor Rubro" Click="tiRubro_Click">
+            <Image x:Name="image2" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorRubro.png"/>
+        </Controls:Tile>
+        <Controls:Tile x:Name="tiUsuario" Margin="214.5,53,337.5,176" Title="Mantenedor Usuario" TitleFontSize="12" Click="tiUsuario_Click">
+            <Image x:Name="image" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorUsuario.png"/>
+        </Controls:Tile>
+        <Controls:Tile x:Name="tiEmpresa" Margin="385.5,53,166.5,176" TitleFontSize="12" Title="Mantenedor Empresa" Click="tiEmpresa_Click">
+            <Image x:Name="image1" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorEmpresa.png"/>
+        </Controls:Tile>
+        <Controls:Tile x:Name="tiProducto" Margin="32.5,53,519.5,176" TitleFontSize="12" Title="Mantenedor Producto" Click="tiProducto_Click">
+            <Image x:Name="image3" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorProducto.png"/>
+        </Controls:Tile>
+        <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="636,243,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
 
     </Grid>
 </Window>
