--- a/Core.DALC/QOfreces.WPF/mainwindow.xaml
+++ b/Core.DALC/QOfreces.WPF/mainwindow.xaml
@@ -1,16 +1,19 @@
-﻿<Window x:Class="QOfreces.WPF.mainwindow"
+﻿<Controls:MetroWindow x:Class="QOfreces.WPF.mainwindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QOfreces.WPF"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"              
         mc:Ignorable="d"
-        Title="mainwindow" Height="300" Width="300">
+        Title="Login" Height="332" Width="300" Background="Gainsboro" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Button x:Name="button" Content="Ingresar" HorizontalAlignment="Left" Margin="201,68,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <Button x:Name="button" Content="Ingresar" HorizontalAlignment="Left" Margin="91,242,0,0" VerticalAlignment="Top" Width="75" Click="button_Click" BorderBrush="Black"/>
         <Label x:Name="label" Content="" HorizontalAlignment="Left" Margin="101,156,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtUser" HorizontalAlignment="Left" Height="23" Margin="10,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="91"/>
-        <TextBox x:Name="txtPassword" HorizontalAlignment="Left" Height="23" Margin="106,65,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="90"/>
-        <Label x:Name="label1" Content="Registrarse" HorizontalAlignment="Left" Margin="80,10,0,0" VerticalAlignment="Top" Width="95"/>
+        <TextBox x:Name="txtUser" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa tu usuario" HorizontalAlignment="Left" Height="23" Margin="10,156,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="272" BorderBrush="Black"/>
+        <PasswordBox x:Name="pbPassword" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa tu contraseña" HorizontalAlignment="Left" Margin="10,200,0,0" VerticalAlignment="Top" Width="272" BorderBrush="Black"/>
+        <Image x:Name="image" HorizontalAlignment="Left" Height="114" Margin="80,25,0,0" VerticalAlignment="Top" Width="111" Source="img/Login.png" Stretch="Fill"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
