--- a/Core.DALC/QOfreces.WPF/Administrador.xaml
+++ b/Core.DALC/QOfreces.WPF/Administrador.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="QOfreces.WPF.Administrador"
+﻿<Controls:MetroWindow x:Class="QOfreces.WPF.Administrador"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -25,4 +25,4 @@
         <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="636,243,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
 
     </Grid>
-</Window>
+</Controls:MetroWindow>
