--- a/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
@@ -1,29 +1,47 @@
-﻿<Window x:Class="QOfreces.WPF.MantenedorProducto"
+﻿<Controls:MetroWindow x:Class="QOfreces.WPF.MantenedorProducto"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QOfreces.WPF"
         mc:Ignorable="d"
-        Title="MantenedorProducto" Height="548.593" Width="891.553">
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        Title="Mantenedor Producto" Height="548.593" Width="891.553">
     <Grid x:Name="col_1">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="181*"/>
-            <ColumnDefinition Width="53*"/>
-        </Grid.ColumnDefinitions>
-        <Button x:Name="button" Content="Agregar Producto" HorizontalAlignment="Left" Margin="44,49,0,0" VerticalAlignment="Top" Width="106" Click="button_Click" Grid.Column="1" Height="22"/>
-        <Button x:Name="btnListarProd" Content="Listar Productos" Grid.Column="1" HorizontalAlignment="Left" Margin="44,76,0,0" VerticalAlignment="Top" Width="106" Height="22" Click="btnListarProd_Click"/>
+        <Button x:Name="btnListarProd" Content="Listar Productos" HorizontalAlignment="Left" Margin="556,220,0,0" VerticalAlignment="Top" Width="128" Height="22" Click="btnListarProd_Click" BorderBrush="Black"/>
         <Label x:Name="lblPrueba" Content="" HorizontalAlignment="Left" Margin="236,135,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <DataGrid x:Name="dgProd" HorizontalAlignment="Left" Margin="27,161,0,0" VerticalAlignment="Top" Height="161" Width="600">
+        <DataGrid x:Name="dgProd" HorizontalAlignment="Left" Margin="84,250,0,0" VerticalAlignment="Top" Height="161" Width="600">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="dgcId" Header="ID" Binding="{Binding Path=IdProducto}"/>
                 <DataGridTextColumn x:Name="dgcNom" Header="Nombre Producto" Binding="{Binding Path=Nombre}"/>
                 <DataGridTextColumn x:Name="dgcPrec" Header="Precio Producto" Binding="{Binding Path=Precio}"/>
             </DataGrid.Columns>
         </DataGrid>
-
-
-
-
+        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese nombre del producto" HorizontalAlignment="Left" Height="23" Margin="176,117,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black"/>
+        <Label x:Name="label" Content="Nombre Producto:" HorizontalAlignment="Left" Margin="72,118,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblPrueba_Copy" Content="" HorizontalAlignment="Left" Margin="236,163,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
+        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese precio" HorizontalAlignment="Left" Height="23" Margin="176,145,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black"/>
+        <Label x:Name="label_Copy" Content="Precio:" HorizontalAlignment="Left" Margin="128,149,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblPrueba_Copy1" Content="" HorizontalAlignment="Left" Margin="268,191,0,0" VerticalAlignment="Top" Height="26" Width="16"/>
+        <TextBox x:Name="txtDescripcion" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese descripcion" HorizontalAlignment="Left" Height="23" Margin="176,173,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black"/>
+        <Label x:Name="label_Copy1" Content="Descripcion:" HorizontalAlignment="Left" Margin="102,176,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblPrueba_Copy2" Content="" HorizontalAlignment="Left" Margin="268,219,0,0" VerticalAlignment="Top" Height="26" Width="16"/>
+        <Label x:Name="lblPrueba_Copy3" Content="" HorizontalAlignment="Left" Margin="268,247,0,0" VerticalAlignment="Top" Height="26" Width="16"/>
+        <Label x:Name="lblPrueba_Copy4" Content="" HorizontalAlignment="Left" Margin="527,108,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
+        <Label x:Name="lblPrueba_Copy5" Content="" HorizontalAlignment="Left" Margin="527,136,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
+        <Label x:Name="label_Copy5" Content="Rubro:" HorizontalAlignment="Left" Margin="427,121,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="lblPrueba_Copy6" Content="" HorizontalAlignment="Left" Margin="527,144,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
+        <Label x:Name="lblPrueba_Copy7" Content="" HorizontalAlignment="Left" Margin="527,172,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
+        <Label x:Name="label_Copy6" Content="Sucursal:" HorizontalAlignment="Left" Margin="415,157,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="cbRubro" HorizontalAlignment="Left" Margin="470,116,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black"/>
+        <ComboBox x:Name="cbSucursal" HorizontalAlignment="Left" Margin="470,154,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black"/>
+        <TextBox x:Name="txtBuscar" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Busqueda" HorizontalAlignment="Left" Height="23" Margin="352,219,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black"/>
+        <Button x:Name="btnAgregar" Content="Agregar" HorizontalAlignment="Left" Margin="785,116,0,0" VerticalAlignment="Top" Width="75" Click="btnAgregar_Click" BorderBrush="Black"/>
+        <Button x:Name="btnModificar" Content="Modificar" HorizontalAlignment="Left" Margin="785,152,0,0" VerticalAlignment="Top" Width="75" BorderBrush="Black"/>
+        <Button x:Name="btnEliminar" Content="Eliminar" HorizontalAlignment="Left" Margin="785,190,0,0" VerticalAlignment="Top" Width="75" BorderBrush="Black"/>
+        <Button x:Name="btnVolver" Content="Volver" HorizontalAlignment="Left" Margin="705,384,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="785,384,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
