--- a/Core.DALC/QOfreces.WPF/GenOferta.xaml
+++ b/Core.DALC/QOfreces.WPF/GenOferta.xaml
@@ -11,15 +11,16 @@
         <Button x:Name="btnListarProd" Content="Listar Productos" HorizontalAlignment="Left" Margin="139,50,0,0" VerticalAlignment="Top" Width="104" Click="btnListarProd_Click"/>
         <DataGrid x:Name="dgProd" HorizontalAlignment="Left" Margin="26,93,0,0" VerticalAlignment="Top" Height="161" Width="600">
             <DataGrid.Columns>
-                <DataGridCheckBoxColumn Header="Seleccionar">
-                    <DataGridCheckBoxColumn.CellStyle>
-                        <Style>
-                            <EventSetter Event="CheckBox.Checked" Handler="OnChecked"/>
-                        </Style>
-                    </DataGridCheckBoxColumn.CellStyle>
-                </DataGridCheckBoxColumn>
+                <DataGridTemplateColumn>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <CheckBox x:Name="chk" />
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
+        <Button x:Name="btnGenOferta" Content="Generar Oferta" HorizontalAlignment="Left" Margin="449,282,0,0" VerticalAlignment="Top" Width="128" Click="btnGenOferta_Click"/>
 
     </Grid>
 </Window>
