--- a/Core.DALC/QOfreces.WPF/EncargadoTienda.xaml
+++ b/Core.DALC/QOfreces.WPF/EncargadoTienda.xaml
@@ -15,6 +15,7 @@
         <Button x:Name="button1" Grid.ColumnSpan="2" Content="Consultar Oferta" HorizontalAlignment="Left" Margin="10,84,0,0" VerticalAlignment="Top" Width="129" Click="button1_Click"/>
         <DataGrid x:Name="dataGridOfertas" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="163,84,0,0" VerticalAlignment="Top" Height="168" Width="540" />
         <Button Grid.ColumnSpan="2" Content="Generar Oferta" HorizontalAlignment="Left" Margin="10,111,0,0" VerticalAlignment="Top" Width="129" Click="Button_Click"/>
+        <Button x:Name="btnPublicar" Grid.ColumnSpan="2" Content="PUBLICAR OFERTA" HorizontalAlignment="Left" Margin="10,143,0,0" VerticalAlignment="Top" Width="129"/>
 
     </Grid>
 </Window>
