--- a/Core.DALC/QOfreces.WPF/EncargadoTienda.xaml
+++ b/Core.DALC/QOfreces.WPF/EncargadoTienda.xaml
@@ -1,21 +1,20 @@
-﻿<Window x:Class="QOfreces.WPF.EncargadoTienda"
+﻿<Controls:MetroWindow x:Class="QOfreces.WPF.EncargadoTienda"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QOfreces.WPF"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="EncargadoTienda" Height="385.185" Width="778.556">
+        Title="Encargado de Tienda" Height="385.185" Width="778.556">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0*"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Label x:Name="lblMenu" Content="Menu Encargado de Tienda" HorizontalAlignment="Center" Margin="67,18,58,0" VerticalAlignment="Top" Width="167" Grid.ColumnSpan="2"/>
-        <Button x:Name="button1" Grid.ColumnSpan="2" Content="Consultar Oferta" HorizontalAlignment="Left" Margin="10,84,0,0" VerticalAlignment="Top" Width="129" Click="button1_Click"/>
+        
+        <Button x:Name="btnConsultar" Grid.ColumnSpan="2" Content="Consultar Oferta" HorizontalAlignment="Left" Margin="10,84,0,0" VerticalAlignment="Top" Width="129" BorderBrush="Black" Click="btnConsultar_Click"/>
         <DataGrid x:Name="dataGridOfertas" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="163,84,0,0" VerticalAlignment="Top" Height="168" Width="540" />
-        <Button Grid.ColumnSpan="2" Content="Generar Oferta" HorizontalAlignment="Left" Margin="10,111,0,0" VerticalAlignment="Top" Width="129" Click="Button_Click"/>
-        <Button x:Name="btnPublicar" Grid.ColumnSpan="2" Content="PUBLICAR OFERTA" HorizontalAlignment="Left" Margin="10,143,0,0" VerticalAlignment="Top" Width="129"/>
-
+        <Button Name="btnGenerar" Content="Generar Oferta" HorizontalAlignment="Left" Margin="10,116,0,0" VerticalAlignment="Top" Width="129" BorderBrush="Black" Click="btnGenerar_Click"/>
+        <Button x:Name="btnPublicar" Content="PUBLICAR OFERTA" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top" Width="129" BorderBrush="Black" Click="btnPublicar_Click"/>
+        <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="628,257,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
