--- a/Core.DALC/QOfreces.WPF/EncargadoTienda.xaml
+++ b/Core.DALC/QOfreces.WPF/EncargadoTienda.xaml
@@ -10,11 +10,19 @@
         mc:Ignorable="d"
         Title="Encargado de Tienda" Height="385.185" Width="778.556">
     <Grid>
-        
+        <Controls:Tile Margin="41,204,590,10" TitleFontSize="12" Title="Consultar oferta">
+            <Image x:Name="image1" Height="100" Width="100" Source="img/Consultar.png"/>
+        </Controls:Tile>
         <Button x:Name="btnConsultar" Grid.ColumnSpan="2" Content="Consultar Oferta" HorizontalAlignment="Left" Margin="10,84,0,0" VerticalAlignment="Top" Width="129" BorderBrush="Black" Click="btnConsultar_Click"/>
-        <DataGrid x:Name="dataGridOfertas" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="163,84,0,0" VerticalAlignment="Top" Height="168" Width="540" />
+        <DataGrid x:Name="dataGridOfertas"  HorizontalAlignment="Left" Margin="198,0,0,0" VerticalAlignment="Top" Height="168" Width="540" />
         <Button Name="btnGenerar" Content="Generar Oferta" HorizontalAlignment="Left" Margin="10,116,0,0" VerticalAlignment="Top" Width="129" BorderBrush="Black" Click="btnGenerar_Click"/>
         <Button x:Name="btnPublicar" Content="PUBLICAR OFERTA" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top" Width="129" BorderBrush="Black" Click="btnPublicar_Click"/>
         <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="628,257,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
+        <Controls:Tile Margin="198,204,433,10" TitleFontSize="12" Title="Generar oferta">
+            <Image x:Name="image2" Height="100" Width="100" Source="img/Generar.png"/>
+        </Controls:Tile>
+        <Controls:Tile Margin="361,204,270,10" TitleFontSize="12" Title="Publicar oferta">
+            <Image x:Name="image" Height="100" Width="100" Source="img/Publicar.png"/>
+        </Controls:Tile>
     </Grid>
 </Controls:MetroWindow>
