--- a/Core.DALC/QOfreces.WPF/EncargadoTienda.xaml
+++ b/Core.DALC/QOfreces.WPF/EncargadoTienda.xaml
@@ -14,7 +14,16 @@
             <Image x:Name="image1" Height="100" Width="100" Source="img/Consultar.png"/>
         </Controls:Tile>
         <Button x:Name="btnConsultar" Grid.ColumnSpan="2" Content="Consultar Oferta" HorizontalAlignment="Left" Margin="10,84,0,0" VerticalAlignment="Top" Width="129" BorderBrush="Black" Click="btnConsultar_Click"/>
-        <DataGrid x:Name="dataGridOfertas"  HorizontalAlignment="Left" Margin="198,0,0,0" VerticalAlignment="Top" Height="168" Width="540" />
+        <DataGrid x:Name="dataGridOfertas"  HorizontalAlignment="Left" Margin="198,10,0,0" VerticalAlignment="Top" Height="168" Width="540" AutoGenerateColumns="False" >
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Id Oferta" Binding="{Binding IdOferta}" />
+                <DataGridTextColumn Header="Nombre Oferta" Binding="{Binding Nombre}" />
+                <DataGridTextColumn Header="Descripcion Oferta" Binding="{Binding Descripcion}" />
+                <DataGridTextColumn Header="Precio Oferta" Binding="{Binding PrecioOferta}" />
+                <DataGridTextColumn Header="Publicada" Binding="{Binding EstadoOferta}" />
+                <DataGridTextColumn Header="Sucursal" Binding="{Binding IdSucursal}" />
+            </DataGrid.Columns>
+        </DataGrid>
         <Button Name="btnGenerar" Content="Generar Oferta" HorizontalAlignment="Left" Margin="10,116,0,0" VerticalAlignment="Top" Width="129" BorderBrush="Black" Click="btnGenerar_Click"/>
         <Button x:Name="btnPublicar" Content="PUBLICAR OFERTA" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top" Width="129" BorderBrush="Black" Click="btnPublicar_Click"/>
         <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="628,257,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
