--- a/Core.DALC/QOfreces.WPF/GenOferta.xaml
+++ b/Core.DALC/QOfreces.WPF/GenOferta.xaml
@@ -5,12 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QOfreces.WPF"
         mc:Ignorable="d"
-        Title="GenOferta" Height="509.548" Width="917.078">
+        Title="GenOferta" Height="578.548" Width="754.078">
     <Grid>
-        <Label Content="GenerarOferta" HorizontalAlignment="Left" Margin="265,20,0,0" VerticalAlignment="Top"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="466*"/>
+            <ColumnDefinition Width="443*"/>
+        </Grid.ColumnDefinitions>
+        <Label Content="GenerarOferta" HorizontalAlignment="Left" Margin="287,15,0,0" VerticalAlignment="Top"/>
 
-        <Button x:Name="btnGenOferta" Content="Generar Oferta" HorizontalAlignment="Left" Margin="709,402,0,0" VerticalAlignment="Top" Width="128" Click="btnGenOferta_Click"/>
-        <DataGrid x:Name="dgProd" HorizontalAlignment="Left" Margin="117,131,0,0" VerticalAlignment="Top" Height="199" Width="583"  AutoGenerateColumns="false" SelectionChanged="dgProd_SelectionChanged">
+        <Button x:Name="btnGenOferta" Content="Generar Oferta" HorizontalAlignment="Left" Margin="25,506,0,0" VerticalAlignment="Top" Width="128" Click="btnGenOferta_Click" Grid.Column="1"/>
+        <DataGrid x:Name="dgProd" HorizontalAlignment="Left" Margin="29,46,0,0" VerticalAlignment="Top" Height="221" Width="704"  AutoGenerateColumns="false" Grid.ColumnSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id Producto" Binding="{Binding IdProducto}" />
                 <DataGridTextColumn Header="SKU" Binding="{Binding Sku}" />
@@ -20,7 +24,21 @@
                 <DataGridCheckBoxColumn x:Name="Selecionar" Header="Seleccionar" Binding="{Binding Selec}" />
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="btnListar" Content="Listar Producto" HorizontalAlignment="Left" Margin="738,187,0,0" VerticalAlignment="Top" Width="114" Click="btnListar_Click"/>
+        <Button x:Name="btnListar" Content="Listar Productos" HorizontalAlignment="Left" Margin="237,281,0,0" VerticalAlignment="Top" Width="114" Click="btnListar_Click" Grid.Column="1"/>
+        <Label Content="Nombre Oferta" HorizontalAlignment="Left" Margin="29,272,0,0" VerticalAlignment="Top" Width="137"/>
+        <Label Content="Precio Oferta" HorizontalAlignment="Left" Margin="29,315,0,0" VerticalAlignment="Top"/>
+        <Label Content="Ingrese Fecha" HorizontalAlignment="Left" Margin="29,357,0,0" VerticalAlignment="Top"/>
+        <Label Content="Descripcion Oferta" HorizontalAlignment="Left" Margin="29,421,0,0" VerticalAlignment="Top"/>
+        <Label Content="Adjuntar Imagen" HorizontalAlignment="Left" Margin="29,384,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNombre" HorizontalAlignment="Left" Height="23" Margin="149,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtPrecio" HorizontalAlignment="Left" Height="23" Margin="149,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtDescOf" HorizontalAlignment="Left" Height="101" Margin="149,432,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="181"/>
+        <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="149,357,0,0" VerticalAlignment="Top"/>
+        <Label Content="Min Pdocuctos" HorizontalAlignment="Left" Margin="304,272,0,0" VerticalAlignment="Top" Width="78"/>
+        <TextBox x:Name="txtMinProd" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="25,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Max Productos" HorizontalAlignment="Left" Margin="304,315,0,0" VerticalAlignment="Top" Width="99" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="txtMaxProd" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="25,315,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+
 
 
     </Grid>
