--- a/Core.DALC/QOfreces.WPF/GenOferta.xaml
+++ b/Core.DALC/QOfreces.WPF/GenOferta.xaml
@@ -1,20 +1,21 @@
-﻿<Window x:Class="QOfreces.WPF.GenOferta"
+﻿<Controls:MetroWindow x:Class="QOfreces.WPF.GenOferta"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QOfreces.WPF"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="GenOferta" Height="692.548" Width="754.078">
+        Title="Generar Oferta" Height="692.548" Width="754.078">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="466*"/>
             <ColumnDefinition Width="443*"/>
         </Grid.ColumnDefinitions>
-        <Label Content="GenerarOferta" HorizontalAlignment="Left" Margin="287,15,0,0" VerticalAlignment="Top"/>
-
         <Button x:Name="btnGenOferta" Content="Generar Oferta" HorizontalAlignment="Left" Margin="46,594,0,0" VerticalAlignment="Top" Width="128" Click="btnGenOferta_Click" Grid.Column="1"/>
-        <DataGrid x:Name="dgProd" HorizontalAlignment="Left" Margin="29,46,0,0" VerticalAlignment="Top" Height="221" Width="704"  AutoGenerateColumns="false" Grid.ColumnSpan="2">
+        <DataGrid x:Name="dgProd" HorizontalAlignment="Left" Margin="29,46,0,0" VerticalAlignment="Top" Height="221" Width="574"  AutoGenerateColumns="false" Grid.ColumnSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id Producto" Binding="{Binding IdProducto}" />
                 <DataGridTextColumn Header="SKU" Binding="{Binding Sku}" />
@@ -24,25 +25,22 @@
                 <DataGridCheckBoxColumn x:Name="Selecionar" Header="Seleccionar" Binding="{Binding Selec}" />
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="btnListar" Content="Listar Productos" HorizontalAlignment="Left" Margin="237,281,0,0" VerticalAlignment="Top" Width="114" Click="btnListar_Click" Grid.Column="1"/>
+        <Button x:Name="btnListar" Content="Listar Productos" HorizontalAlignment="Left" Margin="226,46,0,0" VerticalAlignment="Top" Width="128" Click="btnListar_Click" Grid.Column="1"/>
         <Label Content="Nombre Oferta" HorizontalAlignment="Left" Margin="29,272,0,0" VerticalAlignment="Top" Width="137"/>
         <Label Content="Precio Oferta" HorizontalAlignment="Left" Margin="29,315,0,0" VerticalAlignment="Top"/>
         <Label Content="Ingrese Fecha" HorizontalAlignment="Left" Margin="29,357,0,0" VerticalAlignment="Top"/>
         <Label Content="Descripcion Oferta" HorizontalAlignment="Left" Margin="29,532,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.528,2.423"/>
         <Label Content="Adjuntar Imagen" HorizontalAlignment="Left" Margin="29,384,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtNombre" HorizontalAlignment="Left" Height="23" Margin="149,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtPrecio" HorizontalAlignment="Left" Height="23" Margin="149,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="txtDescOf" HorizontalAlignment="Left" Height="101" Margin="149,532,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="181"/>
+        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa el nombre" HorizontalAlignment="Left" Height="23" Margin="149,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143"/>
+        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa precio" HorizontalAlignment="Left" Height="23" Margin="149,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143"/>
+        <TextBox x:Name="txtDescOf" Controls:TextBoxHelper.ClearTextButton="True" HorizontalAlignment="Left" Height="101" Margin="149,532,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="181"/>
         <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="149,357,0,0" VerticalAlignment="Top"/>
         <Label Content="Min Pdocuctos" HorizontalAlignment="Left" Margin="304,272,0,0" VerticalAlignment="Top" Width="99" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="txtMinProd" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="33,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtMinProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad minima" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="33,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141"/>
         <Label Content="Max Productos" HorizontalAlignment="Left" Margin="304,315,0,0" VerticalAlignment="Top" Width="99" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="txtMaxProd" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="33,315,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="txtMaxProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad maxima" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="33,315,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141"/>
         <Button x:Name="btnAdjuntar" Content="Adjuntar" HorizontalAlignment="Left" Margin="264,450,0,0" VerticalAlignment="Top" Width="75" Click="btnAdjuntar_Click"/>
         <Image x:Name="imgFoto" HorizontalAlignment="Left" Height="100" Margin="149,409,0,0" VerticalAlignment="Top" Width="100"/>
-
-
-
-
+        <TextBox x:Name="txtBuscarProducto" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Buscar producto" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="226,20,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="128"/>
     </Grid>
-</Window>
+</Controls:MetroWindow>
