--- a/Core.DALC/QOfreces.WPF/ListarUsuarios.xaml
+++ b/Core.DALC/QOfreces.WPF/ListarUsuarios.xaml
@@ -1,18 +1,16 @@
-﻿<Window x:Class="QOfreces.WPF.ListarUsuarios"
+﻿<Controls:MetroWindow x:Class="QOfreces.WPF.ListarUsuarios"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QOfreces.WPF"
         mc:Ignorable="d"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         Title="ListarUsuarios" Height="426.852" Width="972.268">
     <Grid>
         <DataGrid x:Name="dataGridProductos" HorizontalAlignment="Left" Margin="99,73,0,0" VerticalAlignment="Top" Height="171" Width="703" Loaded="dataGridProductos_Loaded" SelectionChanged="dataGridProductos_SelectionChanged" >
-            <DataGrid.Columns>
-                <DataGridCheckBoxColumn  />
-            </DataGrid.Columns>
         </DataGrid>
-
-
     </Grid>
-</Window>
+</Controls:MetroWindow>
