--- a/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorProducto.xaml
@@ -8,39 +8,40 @@
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Mantenedor Producto" Height="548.593" Width="891.553">
-    <Grid x:Name="col_1">
-        <Button x:Name="btnListarProd" Content="Listar Productos" HorizontalAlignment="Left" Margin="556,220,0,0" VerticalAlignment="Top" Width="128" Height="22" Click="btnListarProd_Click" BorderBrush="Black"/>
+        Title="Mantenedor Producto" Height="332.593" Width="711.553">
+    <Grid x:Name="col_1" Margin="0,0,2,0">
+        <Button x:Name="btnListarProd" Content="Listar Productos" HorizontalAlignment="Left" Margin="570,27,0,0" VerticalAlignment="Top" Width="128" Height="22" Click="btnListarProd_Click" BorderBrush="Black"/>
         <Label x:Name="lblPrueba" Content="" HorizontalAlignment="Left" Margin="236,135,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <DataGrid x:Name="dgProd" HorizontalAlignment="Left" Margin="84,250,0,0" VerticalAlignment="Top" Height="161" Width="600">
+        <DataGrid x:Name="dgProd" HorizontalAlignment="Left" Margin="396,57,0,0" VerticalAlignment="Top" Height="161" Width="302">
             <DataGrid.Columns>
                 <DataGridTextColumn x:Name="dgcId" Header="ID" Binding="{Binding Path=IdProducto}"/>
                 <DataGridTextColumn x:Name="dgcNom" Header="Nombre Producto" Binding="{Binding Path=Nombre}"/>
                 <DataGridTextColumn x:Name="dgcPrec" Header="Precio Producto" Binding="{Binding Path=Precio}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese nombre del producto" HorizontalAlignment="Left" Height="23" Margin="176,117,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="1"/>
-        <Label x:Name="label" Content="Nombre Producto:" HorizontalAlignment="Left" Margin="72,118,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese nombre del producto" HorizontalAlignment="Left" Height="23" Margin="178,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="1"/>
+        <Label x:Name="label" Content="Nombre Producto:" HorizontalAlignment="Left" Margin="65,25,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblPrueba_Copy" Content="" HorizontalAlignment="Left" Margin="236,163,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese precio" HorizontalAlignment="Left" Height="23" Margin="176,145,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="2"/>
-        <Label x:Name="label_Copy" Content="Precio:" HorizontalAlignment="Left" Margin="128,149,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese precio" HorizontalAlignment="Left" Height="23" Margin="178,56,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="2"/>
+        <Label x:Name="label_Copy" Content="Precio:" HorizontalAlignment="Left" Margin="128,56,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblPrueba_Copy1" Content="" HorizontalAlignment="Left" Margin="268,191,0,0" VerticalAlignment="Top" Height="26" Width="16"/>
-        <TextBox x:Name="txtDescripcion" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese descripcion" HorizontalAlignment="Left" Height="23" Margin="176,173,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="3"/>
-        <Label x:Name="label_Copy1" Content="Descripcion:" HorizontalAlignment="Left" Margin="102,176,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtDescripcion" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingrese descripcion" HorizontalAlignment="Left" Height="23" Margin="178,87,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black" TabIndex="3"/>
+        <Label x:Name="label_Copy1" Content="Descripcion:" HorizontalAlignment="Left" Margin="99,87,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblPrueba_Copy2" Content="" HorizontalAlignment="Left" Margin="268,219,0,0" VerticalAlignment="Top" Height="26" Width="16"/>
         <Label x:Name="lblPrueba_Copy3" Content="" HorizontalAlignment="Left" Margin="268,247,0,0" VerticalAlignment="Top" Height="26" Width="16"/>
         <Label x:Name="lblPrueba_Copy4" Content="" HorizontalAlignment="Left" Margin="527,108,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
         <Label x:Name="lblPrueba_Copy5" Content="" HorizontalAlignment="Left" Margin="527,136,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <Label x:Name="label_Copy5" Content="Rubro:" HorizontalAlignment="Left" Margin="427,121,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label_Copy5" Content="Rubro:" HorizontalAlignment="Left" Margin="128,116,0,0" VerticalAlignment="Top"/>
         <Label x:Name="lblPrueba_Copy6" Content="" HorizontalAlignment="Left" Margin="527,144,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
         <Label x:Name="lblPrueba_Copy7" Content="" HorizontalAlignment="Left" Margin="527,172,0,0" VerticalAlignment="Top" Height="26" Width="10"/>
-        <Label x:Name="label_Copy6" Content="Sucursal:" HorizontalAlignment="Left" Margin="415,157,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="cbRubro" HorizontalAlignment="Left" Margin="470,116,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black" TabIndex="4"/>
-        <ComboBox x:Name="cbSucursal" HorizontalAlignment="Left" Margin="470,154,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black" TabIndex="5"/>
-        <TextBox x:Name="txtBuscar" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Busqueda" HorizontalAlignment="Left" Height="23" Margin="352,219,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="199" BorderBrush="Black"/>
-        <Button x:Name="btnAgregar" Content="Agregar" HorizontalAlignment="Left" Margin="785,116,0,0" VerticalAlignment="Top" Width="75" Click="btnAgregar_Click" BorderBrush="Black" TabIndex="6"/>
-        <Button x:Name="btnModificar" Content="Modificar" HorizontalAlignment="Left" Margin="785,152,0,0" VerticalAlignment="Top" Width="75" BorderBrush="Black" Click="btnModificar_Click"/>
-        <Button x:Name="btnEliminar" Content="Eliminar" HorizontalAlignment="Left" Margin="785,190,0,0" VerticalAlignment="Top" Width="75" BorderBrush="Black" Click="btnEliminar_Click"/>
+        <Label x:Name="label_Copy6" Content="Sucursal:" HorizontalAlignment="Left" Margin="117,147,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="cbRubro" HorizontalAlignment="Left" Margin="178,118,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black" TabIndex="4"/>
+        <ComboBox x:Name="cbSucursal" HorizontalAlignment="Left" Margin="178,151,0,0" VerticalAlignment="Top" Width="120" BorderBrush="Black" TabIndex="5"/>
+        <TextBox x:Name="txtBuscar" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Busqueda" HorizontalAlignment="Left" Height="23" Margin="396,27,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="169" BorderBrush="Black"/>
+        <Button x:Name="btnAgregar" Content="Agregar" HorizontalAlignment="Left" Margin="128,246,0,0" VerticalAlignment="Top" Width="75" Click="btnAgregar_Click" BorderBrush="Black" TabIndex="6"/>
+        <Button x:Name="btnModificar" Content="Modificar" HorizontalAlignment="Left" Margin="223,245,0,0" VerticalAlignment="Top" Width="75" BorderBrush="Black" Click="btnModificar_Click"/>
+        <Button x:Name="btnEliminar" Content="Eliminar" HorizontalAlignment="Left" Margin="326,245,0,0" VerticalAlignment="Top" Width="75" BorderBrush="Black" Click="btnEliminar_Click"/>
         <Button x:Name="btnVolver" Content="Volver" HorizontalAlignment="Left" Margin="785,384,0,0" VerticalAlignment="Top" Width="75" Click="btnVolver_Click"/>
+        <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="617,246,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
     </Grid>
 </Controls:MetroWindow>
