--- a/Core.DALC/QOfreces.WPF/GenOferta.xaml
+++ b/Core.DALC/QOfreces.WPF/GenOferta.xaml
@@ -8,13 +8,13 @@
         xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="Generar Oferta" Height="692.548" Width="754.078">
+        Title="Generar Oferta" Height="692.548" Width="754.078" Background="Gainsboro">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="466*"/>
             <ColumnDefinition Width="443*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="btnGenOferta" Content="Generar Oferta" HorizontalAlignment="Left" Margin="46,594,0,0" VerticalAlignment="Top" Width="128" Click="btnGenOferta_Click" Grid.Column="1"/>
+        <Button x:Name="btnGenOferta" Content="Generar Oferta" HorizontalAlignment="Left" Margin="46,594,0,0" VerticalAlignment="Top" Width="128" Click="btnGenOferta_Click" Grid.Column="1" BorderBrush="Black"/>
         <DataGrid x:Name="dgProd" HorizontalAlignment="Left" Margin="29,20,0,0" VerticalAlignment="Top" Height="221" Width="574"  AutoGenerateColumns="false" Grid.ColumnSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id Producto" Binding="{Binding IdProducto}" />
@@ -25,22 +25,22 @@
                 <DataGridCheckBoxColumn x:Name="Selecionar" Header="Seleccionar" Binding="{Binding Selec}" />
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="btnListar" Content="Listar Productos" HorizontalAlignment="Left" Margin="226,46,0,0" VerticalAlignment="Top" Width="128" Click="btnListar_Click" Grid.Column="1"/>
+        <Button x:Name="btnListar" Content="Listar Productos" HorizontalAlignment="Left" Margin="226,46,0,0" VerticalAlignment="Top" Width="128" Click="btnListar_Click" Grid.Column="1" BorderBrush="Black"/>
         <Label Content="Nombre Oferta" HorizontalAlignment="Left" Margin="29,272,0,0" VerticalAlignment="Top" Width="137"/>
         <Label Content="Precio Oferta" HorizontalAlignment="Left" Margin="29,315,0,0" VerticalAlignment="Top"/>
         <Label Content="Ingrese Fecha" HorizontalAlignment="Left" Margin="29,357,0,0" VerticalAlignment="Top"/>
         <Label Content="Descripcion Oferta" HorizontalAlignment="Left" Margin="29,532,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.528,2.423"/>
         <Label Content="Adjuntar Imagen" HorizontalAlignment="Left" Margin="29,384,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa el nombre" HorizontalAlignment="Left" Height="23" Margin="149,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143"/>
-        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa precio" HorizontalAlignment="Left" Height="23" Margin="149,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143"/>
-        <TextBox x:Name="txtDescOf" Controls:TextBoxHelper.ClearTextButton="True" HorizontalAlignment="Left" Height="101" Margin="149,532,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="181"/>
-        <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="149,357,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa el nombre" HorizontalAlignment="Left" Height="23" Margin="149,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
+        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa precio" HorizontalAlignment="Left" Height="23" Margin="149,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
+        <TextBox x:Name="txtDescOf" Controls:TextBoxHelper.ClearTextButton="True" HorizontalAlignment="Left" Height="101" Margin="149,532,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="181" BorderBrush="Black"/>
+        <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="149,357,0,0" VerticalAlignment="Top" BorderBrush="Black"/>
         <Label Content="Min Pdocuctos" HorizontalAlignment="Left" Margin="304,272,0,0" VerticalAlignment="Top" Width="99" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="txtMinProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad minima" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="33,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141"/>
+        <TextBox x:Name="txtMinProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad minima" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="33,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black"/>
         <Label Content="Max Productos" HorizontalAlignment="Left" Margin="304,315,0,0" VerticalAlignment="Top" Width="99" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="txtMaxProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad maxima" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="33,315,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141"/>
-        <Button x:Name="btnAdjuntar" Content="Adjuntar" HorizontalAlignment="Left" Margin="264,450,0,0" VerticalAlignment="Top" Width="75" Click="btnAdjuntar_Click"/>
+        <TextBox x:Name="txtMaxProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad maxima" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="33,315,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black"/>
+        <Button x:Name="btnAdjuntar" Content="Adjuntar" HorizontalAlignment="Left" Margin="264,450,0,0" VerticalAlignment="Top" Width="75" Click="btnAdjuntar_Click" BorderBrush="Black"/>
         <Image x:Name="imgFoto" HorizontalAlignment="Left" Height="100" Margin="149,409,0,0" VerticalAlignment="Top" Width="100"/>
-        <TextBox x:Name="txtBuscarProducto" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Buscar producto" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="226,20,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="128"/>
+        <TextBox x:Name="txtBuscarProducto" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Buscar producto" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="226,20,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="128" BorderBrush="Black"/>
     </Grid>
 </Controls:MetroWindow>
